Dark mode fixes

--- a/src/theme/BlogPostItem/Header/Info/styles.module.css
+++ b/src/theme/BlogPostItem/Header/Info/styles.module.css
@@ -33,3 +33,27 @@
     color: var(--color-wave-800);
   }
 }
+[data-theme="dark"] {
+  .tag {
+    border: 1px solid var(--color-brand-700);
+    background-color: var(--color-brand-1000);
+    & a {
+      color: var(--color-brand-300);
+    }
+  }
+  .fusion {
+    & a {
+      color: var(--color-fusion-400);
+    }
+  }
+  .multiqc {
+    & a {
+      color: var(--color-multiqc-200);
+    }
+  }
+  .wave {
+    & a {
+      color: var(--color-wave-200);
+    }
+  }
+}
